# SmolCore2D

./: CMakeLists.txt  README.md
cmake/: Config.cmake.in
source/smol/: core2d.hpp
source/smol/core2d/: rect.hpp  size.hpp  vec2.hpp
tests/: tests.cpp
